# Kanotale

./: CMakeLists.txt  README.md  attackstick.cpp  attackstick.h  bulletitem.cpp  bulletitem.h  dogbulletitem.cpp  dogbulletitem.h  fixedbulletitem.cpp  fixedbulletitem.h  homingbulletitem.cpp  homingbulletitem.h  linearbulletitem.cpp  linearbulletitem.h  main.cpp  playerheartitem.cpp  playerheartitem.h  resource.qrc  settings.cpp  settings.h  settings.ui  warningitem.cpp  warningitem.h  widget.cpp  widget.h  widget.ui
